spacing looks better on demo page fix white space on left and right

--- a/tile.css
+++ b/tile.css
@@ -13,9 +13,9 @@ html {
     gap: 1.5px;
     font-family: sans-serif;
     padding-top: 5vh;
-    max-width: 70vw;
+    max-width: 62vw;
     display: grid;
-    gap: 20px;
+    gap: 2.5vw;
     margin-bottom: 13vh;
     transform-origin: left top;
 	transform: scale(1.3)
@@ -105,4 +105,6 @@ text-decoration: underline;
     display: flex;
     flex-direction: column;
     flex-direction: flex-start;
+    margin: 0 5vw;
   }
+  
